syntax = "proto3";

message ImportBar {
  string name = 1;
}
